# synthetrix

./: .env.example  .gitignore  AIPROD_CORRELATIONS.md  CHANGELOG.md  CONSOLIDATION.md  README.md  build_index.py  comfyctl.py  config.toml  fetch.py  harvest_images.py  ingest_local.py  ingest_provisioned.py  pick.py
.github/workflows/: ci.yml  release.yml
app/: .gitignore  Cargo.toml  README.md  build.rs
app/.github/workflows/: release.yml
app/scripts/: build_msi.ps1
app/src/: app.rs  civitai.rs  comfy.rs  config.rs  convert.rs  db.rs  git_update.rs  lore.rs  main.rs  pipelines.rs  pngmeta.rs  project.rs  release.rs  runtime.rs  tabs.rs  wfgraph.rs  worker.rs
app/src/backends/: audio.rs  comfy_local.rs  mod.rs  tripo.rs
app/wix/: License.rtf  main.wxs
comfyui/: README.md  synthetrix_open.js
docs/: LORE-MATRIX.md  PARITY-tinyforge.md  PROMPT-GENERATION.md
synthetrix/: __init__.py  api.py  catalog.py  config.py  images.py  imgmeta.py
synthetrix/comfy/: __init__.py  checks.py  launch.py  paths.py  preflight.py  profile.py  provision.py  rules.py
