[package]
name = "synthetrix"
version = "0.1.13"
edition = "2021"
authors = ["ophiocus <csantanad@gmail.com>"]
description = "Per-IP creative-production orchestrator: forge, lore, prompts, pipelines, releases"
license = "MIT"

[dependencies]
# Render via wgpu (DX12/Vulkan), NOT glow (OpenGL): the NVIDIA OpenGL driver
# (nvoglv64.dll) stack-overflows on this GL path at startup (exception
# 0xC00000FD). wgpu goes through DirectX 12 on Windows and avoids it.
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
egui = "0.28"
egui_extras = { version = "0.28", features = ["all_loaders"] }
egui_commonmark = { version = "0.17", default-features = false, features = ["pulldown_cmark"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rfd = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
flate2 = "1"

[build-dependencies]
winres = "0.1"

[package.metadata.wix]
upgrade-guid = "FE0265EA-BB63-4968-BF77-27DD0ED1A5F7"
path-guid    = "7F3D2F51-2CFD-4AC6-9090-C941161B7EA3"
license      = false
eula         = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
